--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <!-- Masthead-->
         <hr class="section-line">
 <!-- CV Section -->
+background-color: transparent;
 <section id="cv" class="py-5" style="color: white;">
     <div class="container">
         <h2 class="text-center text-uppercase mb-4">Resume</h2>
@@ -144,7 +145,6 @@
         </div>
 
         <!-- About Section Content-->
-
         <div class="row">
                     <div class="row">
             <div class="col-lg-4 ms-auto">
