--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    
+</body>
+</html>
+<nav class="navbar navbar-expand-lg text-uppercase" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand" href="#page-top">Jiro Magracia</a>
+    <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ms-auto">  <!-- Right-aligned links -->
+        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
+        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
+        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
     <body>
         <style>
             /* Style for the video section */
@@ -42,23 +59,7 @@
             <script src="https://player.vimeo.com/api/player.js"></script>
         </section>
     </body>
-</html>
-<nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav">
-  <div class="container">
-    <a class="navbar-brand" href="#page-top">Jiro Magracia</a>
-    <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      Menu
-      <i class="fas fa-bars"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ms-auto">  <!-- Right-aligned links -->
-        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+
         <!-- Masthead-->
         <hr class="section-line">
 <!-- CV Section -->
@@ -165,7 +166,7 @@
 </section>
         </section>
         <!-- Footer-->
-        <footer class="footer text-center" style="background-color: #002d00; color: white;">
+        <footer class="footer text-center" style="background-color: transparent; color: white;">
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
@@ -197,7 +198,7 @@
             </div>
         </footer>
         <!-- Copyright Section-->
-        <div class="copyright py-4 text-center text-white" style="background-color: #002d00;">
+        <div class="copyright py-4 text-center text-white" style="background-color: transparent;">
             <div class="container"><small>Copyright &copy; Jiro Magracia 2025</small></div>
         </div>
         <!-- Portfolio Modals-->
@@ -392,15 +393,21 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
-</html>
+        </div> <!-- Closing div for your content, make sure it matches the opened divs above -->
+
+<!-- JavaScript should be placed just before the closing </body> tag -->
+<script>
+  // Your JavaScript code goes here
+
+  window.addEventListener("scroll", function() {
+    var navbar = document.getElementById("mainNav");
+    if (window.pageYOffset > 0) {
+      navbar.classList.add("fixed-top");
+    } else {
+      navbar.classList.remove("fixed-top");
+    }
+  });
+</script>
+
+</body> <!-- Closing body tag -->
+</html> <!-- Closing html tag -->
