--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <section id="portfolio">...</section>
+<section id="resume">...</section>
+<section id="about">...</section>
     <body>
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav"> <!-- Added navbar-dark and bg-dark for black background -->
+  <!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-        <!-- LinkedIn Redirect -->
-        <a class="navbar-brand" href="https://www.linkedin.com/in/jiro-magracia-12636227a/" target="_blank">Jiro Magracia</a>
-        
-        <!-- Hamburger Menu Button -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i> <!-- White hamburger icon -->
+        <a class="navbar-brand" href="#">Jiro Magracia</a>
+        <button class="navbar-toggler" type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
         </button>
-
-        <!-- Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto"> <!-- Right-aligned navbar links -->
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item mx-0 mx-lg-1">
                     <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a>
                 </li>
