--- a/index.html
+++ b/index.html
@@ -15,32 +15,24 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     <body>
-        <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="#">Jiro Magracia</a>
-                <button class="navbar-toggler" type="button" 
-                        data-bs-toggle="collapse" 
-                        data-bs-target="#navbarResponsive"
-                        aria-expanded="false" 
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#resume">Resume</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+<!-- Updated Navbar -->
+<nav class="navbar navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(30, 30, 30, 0.85);">
+    <div class="container">
+        <a class="navbar-brand" href="https://www.linkedin.com/in/jiro-magracia-12636227a/" target="_blank">
+            Jiro Magracia <i class="fab fa-linkedin"></i>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
     </body>
 </html>
     </div>
@@ -190,10 +182,10 @@
 <hr class="section-line">
 
 <!-- About Section -->
-<section class="page-section" id="about" style="background-color: #002d00; color: white;">
+<section class="page-section" id="about" style="background-color: #002d00; color: white; padding: 60px 0;">
     <div class="container">
         <!-- About Section Heading -->
-        <h2 class="page-section-heading text-center text-uppercase text-white" 
+        <h2 class="page-section-heading text-center text-uppercase text-white mb-5" 
             style="font-family: 'Quicksand', sans-serif; font-weight: 600;">
             About
         </h2>
@@ -203,18 +195,22 @@
             <div class="divider-custom-line"></div>
         </div>
 
-<!-- About Section Content-->
-<div class="container py-5" id="about-section">
-    <div class="row">
-        <!-- Left Column -->
-        <div class="col-lg-5 mx-auto">
-            <p class="lead about-text">Born and raised in Japan, Italy, and Germany! I have loved and respected Animation for as long as I can remember. I started YouTubing as a kid and gained a big following, which motivated me to further study my craft. I completed my studies in Animation at the Filmakademie Animationinstitut in Ludwigsburg, Germany, in early 2024, and Animation Mentor in 2025.</p>
-        </div>
-        <!-- Right Column -->
-        <div class="col-lg-5 mx-auto">
-            <p class="lead about-text">I acquired knowledge in 2D Animation, Editing, Directing, Lead Animation, and CG Animation. I had the amazing opportunity to work with mentors from studios like Pixar and DreamWorks to enhance my 3D Animation skills. My goal is to observe interesting things in life and bring them to life through my animations, entertaining each and every viewer.</p>
+        <!-- Single Content Box -->
+        <div class="row justify-content-center mt-5">
+            <div class="col-lg-10">
+                <div class="content-box about-box">
+                    <p class="lead about-text">
+                        Born and raised in Japan, Italy, and Germany! I have loved and respected Animation for as long as I can remember. I started YouTubing as a kid and gained a big following, which motivated me to further study my craft. I completed my studies in Animation at the Filmakademie Animationinstitut in Ludwigsburg, Germany, in early 2024, and Animation Mentor in 2025.
+                        <br><br>
+                        I acquired knowledge in 2D Animation, Editing, Directing, Lead Animation, and CG Animation. I had the amazing opportunity to work with mentors from studios like Pixar and DreamWorks to enhance my 3D Animation skills. My goal is to observe interesting things in life and bring them to life through my animations, entertaining each and every viewer.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
+</section>
+    </div>
+</section>
 </div>
 </section>
 <section id="section1" style="margin-bottom: 40px;">
