--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
     <head>
         <!-- Required Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Bootstrap JS Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Font Awesome -->
-<script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap JS Bundle -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/your-kit-code.js" crossorigin="anonymous"></script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="" />
@@ -22,25 +20,28 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+    </head>
     <body>
-<!-- Updated Navbar HTML -->
-<nav class="navbar navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(250, 240, 230, 0.95);">
-    <div class="container">
-        <a class="navbar-brand" href="https://www.linkedin.com/in/jiro-magracia-12636227a/" target="_blank" style="font-family: 'Quicksand', cursive; color: #333;">
-            Jiro Magracia <i class="fab fa-linkedin" style="color: #333;"></i>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#portfolio" style="color: #333;">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="#resume" style="color: #333;">Resume</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about" style="color: #333;">About</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+        <!-- Updated Navbar HTML -->
+        <nav class="navbar navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(250, 240, 230, 0.95);">
+            <div class="container">
+                <a class="navbar-brand" href="https://www.linkedin.com/in/jiro-magracia-12636227a/" target="_blank" style="font-family: 'Quicksand', cursive; color: #333;">
+                    Jiro Magracia <i class="fab fa-linkedin" style="color: #333;"></i>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </body>
+</html>
                 <!-- Masthead-->
                 <hr class="section-line">
 <!-- Video Section -->
