--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <link rel="stylesheet" href="css/styles.css?v=1.2">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
         <title>Jiro Magracia Portfolio Website</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/yellow-favicon.ico" />
