--- a/index.html
+++ b/index.html
@@ -269,22 +269,22 @@
                 </div>
             </div>
             
-       <!-- Footer Social Icons-->
+<!-- Footer Social Icons-->
 <div class="col-lg-4 mb-5 mb-lg-0">
     <div class="footer-item">
-        <!-- Add Magnet Icon Above Connect -->
+        <!-- Magnet Icon -->
         <div class="footer-icon-container">
-            <i class="fas fa-magnet footer-icon"></i> <!-- Magnet icon -->
+            <i class="fas fa-magnet footer-icon" style="color: #ff9e00;"></i>
         </div>
         <h4 class="text-uppercase mb-3">Connect</h4>
-        <div class="social-links">
-            <a class="social-link" href="https://www.linkedin.com/in/jiro-magracia-12636227a/" target="_blank">
+        <div class="social-links" style="gap: 30px;">
+            <a class="social-link" href="https://www.linkedin.com/in/jiro-magracia-12636227a/" target="blank" style="color: white;">
                 <i class="fab fa-linkedin-in"></i>
             </a>
-            <a class="social-link" href="https://www.instagram.com/jiroishero/" target="_blank">
+            <a class="social-link" href="https://www.instagram.com/jiroishero/" target="_blank" style="color: white;">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a class="social-link" href="mailto:jiroishero@gmail.com">
+            <a class="social-link" href="mailto:jiroishero@gmail.com" style="color: white;">
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
