--- a/index.html
+++ b/index.html
@@ -70,24 +70,7 @@
 <script src="https://player.vimeo.com/api/player.js"></script>
     </body>
 <!-- Gradient Line -->
-<div class="section-divider gradient-divider"></div>
-
-<!-- Brush Stroke -->
-<div class="brush-stroke">
-    <svg viewBox="0 0 500 20">
-        <path d="M0,15 Q125,5 250,15 T500,5" stroke="#f39c12" stroke-width="3" fill="none" stroke-linecap="round"></path>
-    </svg>
-</div>
-
-<style>
-.brush-stroke {
-    margin: 3rem 0;
-    width: 100%;
-}
-
-.brush-stroke svg {
-    width: 100%;
-    height: 30px;
+<div class="half-line-divider"></div>
 }
 </style>
         <!-- Resume Section -->
@@ -195,26 +178,7 @@
 </div>
 </div>
 </section>
-    
-</section>  <!-- Close previous section properly -->
-<!-- Brush Stroke -->
-<div class="brush-stroke">
-    <svg viewBox="0 0 500 20">
-        <path d="M0,15 Q125,5 250,15 T500,5" stroke="#f39c12" stroke-width="3" fill="none" stroke-linecap="round"></path>
-    </svg>
-</div>
-
-<style>
-.brush-stroke {
-    margin: 3rem 0;
-    width: 100%;
-}
-
-.brush-stroke svg {
-    width: 100%;
-    height: 30px;
-}
-</style>
+<div class="half-line-divider"></div>
 <!-- About Section -->
 <section class="page-section" id="about" style="background-color: #f5f5f5; color: #ffffff; padding: 40px 0;">
     <div class="container">
