--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Simple, working version for GitHub Pages -->
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="manifest" href="site.webmanifest">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Your Website Title</title>
+        
+        <!-- Favicon with cache buster -->
+        <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=2">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=2">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=2">
+        <link rel="manifest" href="site.webmanifest?v=2">
+        
+        <!-- Force GitHub Pages to recognize static files -->
+        <meta name="robots" content="noindex">
+    </head>
         <!-- Required Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap JS Bundle -->
