Force favicon update with nojekyll and config

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Your Website Title</title>
         
-        <!-- Favicon with cache buster -->
-        <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=2">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=2">
-        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=2">
-        <link rel="manifest" href="site.webmanifest?v=2">
-        
+        <head>
+            <!-- Favicon with cache busting -->
+            <link rel="icon" href="/favicon.ico?rev=2" type="image/x-icon">
+            <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?rev=2">
+            <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?rev=2">
+            <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?rev=2">
+            <link rel="manifest" href="/site.webmanifest?rev=2">
+        </head>
         <!-- Force GitHub Pages to recognize static files -->
         <meta name="robots" content="noindex">
     </head>
