--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Your Website Title</title>
-        
         <head>
-            <!-- Favicon with cache busting -->
-            <link rel="icon" href="/favicon.ico?rev=2" type="image/x-icon">
-            <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?rev=2">
-            <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?rev=2">
-            <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?rev=2">
-            <link rel="manifest" href="/site.webmanifest?rev=2">
+            <!-- GitHub Pages Favicon (Working Version) -->
+            <link rel="icon" href="/favicon.ico?rev=5" type="image/x-icon">
+            <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?rev=5">
+            <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?rev=5">
+            <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?rev=5">
+            <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         </head>
         <!-- Force GitHub Pages to recognize static files -->
         <meta name="robots" content="noindex">
