--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Your Website Title</title>
+        <title>Jiro Magracia Portfolio</title>
         <head>
             <!-- GitHub Pages Favicon (Working Version) -->
             <link rel="icon" href="/favicon.ico?rev=5" type="image/x-icon">
