FINALLY fix favicons with nojekyll and cache control

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jiro Magracia Portfolio</title>
         <head>
-            <!-- GitHub Pages Favicon (Working Version) -->
-            <link rel="icon" href="/favicon.ico?rev=5" type="image/x-icon">
-            <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?rev=5">
-            <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?rev=5">
-            <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?rev=5">
+            <!-- GitHub Pages Favicon (Proven Working Version) -->
+            <link rel="icon" href="/favicon.ico?rev=6" type="image/x-icon">
+            <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?rev=6">
+            <link rel="apple-touch-icon" href="/apple-touch-icon.png?rev=6">
+            <link rel="manifest" href="/site.webmanifest?rev=6">
+            <meta name="theme-color" content="#ffffff">
+            
+            <!-- Cache Killer -->
             <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         </head>
         <!-- Force GitHub Pages to recognize static files -->
