--- a/index.html
+++ b/index.html
@@ -115,18 +115,17 @@
 <div class="timeline-item">
     <div class="timeline-icon">💼</div>
     <div class="content">
-        <h3>Character Animator - Studio Soi 
-            <span class="pumuckl-icon" aria-label="Pumuckl"></span>
+        <h3>Studio Soi - Pumuckl Und Das Grosse Missverständniss
         </h3>
         <p class="timeline-date">April 2025 - PRESENT | Ludwigsburg</p>
-        <p class="timeline-desc">Character animation for the popular movie <em>Pumuckl Und Das Grosse Missverständniss</em>.</p>
+        <p class="timeline-desc">Character Animator for movie: Pumuckl Und Das Grosse Missverständniss.</p>
     </div>
 </div>
             <!-- AnimationsFabrik -->
             <div class="timeline-item">
                 <div class="timeline-icon">💼</div>
                 <div class="content">
-                    <h3>Character Animator - AnimationsFabrik</h3>
+                    <h3>AnimationsFabrik - Character Animator</h3>
                     <p class="timeline-date">Nov 2024 - Mar 2025 | Hamburg</p>
                     <p class="timeline-desc">Freelance character animator for commercial projects.</p>
                 </div>
@@ -135,18 +134,18 @@
             <div class="timeline-item">
                 <div class="timeline-icon">💼</div>
                 <div class="content">
-                    <h3>Character Animator - Studio Filmbilder</h3>
-                    <p class="timeline-date">Jul 2022 - Sep 2022 | Ludwigsburg</p>
-                    <p class="timeline-desc">Character animation for <em>AnimAnimals Episode Bieber</em>.</p>
+                    <h3>Studio Filmbilder - AnimAnimals</h3>
+                    <p class="timeline-date">Jul 2022 - Sep 2022 | Stuttgart</p>
+                    <p class="timeline-desc"> Character Animator for full episode AnimAnimals Episode "Bieber"</p>
                 </div>
             </div>
             <!-- Bitteschoen.tv -->
             <div class="timeline-item">
                 <div class="timeline-icon">💼</div>
                 <div class="content">
-                    <h3>Character Animator & Illustrator - Bitteschoen.tv</h3>
+                    <h3>Bitteschoen.tv</h3>
                     <p class="timeline-date">Sep 2017 - Mar 2018 | Berlin</p>
-                    <p class="timeline-desc">First industry role: 2D animation and illustration for studio projects.</p>
+                    <p class="timeline-desc">First industry role: 2D animation and illustration for various studio projects.</p>
                 </div>
             </div>
         </div>
