added contact me section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <li class="nav-item"><a class="nav-link hover-underline" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link hover-underline" href="#resume">Resume</a></li>
                         <li class="nav-item"><a class="nav-link hover-underline" href="#about">About</a></li>
+                        <a class="nav-link hover-underline" href="#contact">Contact Me</a>
                     </ul>
                 </div>
             </div>
@@ -272,17 +273,22 @@
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
+                    
                 </div>
             </div>
-<div class="col-lg-4 mb-5 mb-lg-0">
-    <a href="mailto:jiroishero@gmail.com" class="footer-item contact-item">
-        <div class="footer-icon-container">
-            <i class="fas fa-envelope footer-icon"></i>
-        </div>
-        <h4 class="text-uppercase mb-3">Contact</h4>
-        <p>Click to email me</p> <!-- Changed text to indicate it's clickable -->
-    </a>
-</div>
+            <div class="col-lg-4 mb-5 mb-lg-0">
+                <!-- Changed to div with ID for navigation target -->
+                <div id="contact" class="footer-item contact-item">
+                    <!-- Wrapped just the email content in the mailto link -->
+                    <a href="mailto:jiroishero@gmail.com" class="contact-email-link">
+                        <div class="footer-icon-container">
+                            <i class="fas fa-envelope footer-icon"></i>
+                        </div>
+                        <h4 class="text-uppercase mb-3">Contact</h4>
+                        <p>Click to email me</p>
+                    </a>
+                </div>
+            </div>
                     </p>
                 </div>
             </div>
