--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             <div class="timeline-item">
                 <div class="timeline-icon">🎓</div>
                 <div class="content">
-                    <h3>Advanced Studies in 3D Character Animation</h3>
-                    <p class="timeline-meta">Animation Mentor | Sep 2024 - Mar 2025</p>
+                    <h3>Animation Mentor</h3>
+                    <p class="timeline-meta">Animation MentorAdvanced Studies in 3D Character Animation | Sep 2024 - Mar 2025</p>
                     <ul class="timeline-highlights">
                         <li>AN03: Mentored by Dreamworks Supervisor <strong>Michael Amos</strong>.</li>
                         <li>AN04: Acting techniques with Pixar Animator <strong>Shad Bradbury</strong>.</li>
@@ -172,8 +172,8 @@
             <div class="timeline-item">
                 <div class="timeline-icon">🎓</div>
                 <div class="content">
-                    <h3>Diploma in Animation</h3>
-                    <p class="timeline-meta">Filmakademie Baden-Württemberg | Sep 2018 - Apr 2024</p>
+                    <h3>Filmakademie Baden-Württemberg/Animationsinstitut </h3>
+                    <p class="timeline-meta">Diploma in Animation | Stuttgart, Sep 2018 - Apr 2024</p>
                     <ul class="timeline-highlights">
                         <li>Specialized in 3D Character Animation under <strong>Dan Nguyen (Pixar)</strong> and <strong>Thomas Grummt (Dreamworks)</strong>.</li>
                         <li>Directed and lead-animated student projects.</li>
@@ -185,8 +185,8 @@
             <div class="timeline-item">
                 <div class="timeline-icon">🎓</div>
                 <div class="content">
-                    <h3>Certificate in 3D Animation</h3>
-                    <p class="timeline-meta">Hochschule Luzern (LuMAA) | Jul 2023 - Sep 2023</p>
+                    <h3>LuMAA - The Lucerne Master Academy of Animation</h3>
+                    <p class="timeline-meta">Certificate in 3D Animation | July 2023 - Sep 2023</p>
                     <ul class="timeline-highlights">
                         <li>6-week intensive training with mentors from <strong>Dreamworks, Pixar, ILM, and WETA</strong>.</li>
                     </ul>
