--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="timeline-icon">🎓</div>
                 <div class="content">
                     <h3>Animation Mentor</h3>
-                    <p class="timeline-meta">Animation MentorAdvanced Studies in 3D Character Animation | Sep 2024 - Mar 2025</p>
+                    <p class="timeline-meta">Advanced Studies in 3D Character Animation | Sep 2024 - Mar 2025</p>
                     <ul class="timeline-highlights">
                         <li>AN03: Mentored by Dreamworks Supervisor <strong>Michael Amos</strong>.</li>
                         <li>AN04: Acting techniques with Pixar Animator <strong>Shad Bradbury</strong>.</li>
