--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Jiro Magracia Portfolio</title>
-        <head>
-            <!-- GitHub Pages Favicon (Proven Working Version) -->
-            <link rel="icon" href="/favicon.ico?rev=6" type="image/x-icon">
-            <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?rev=6">
-            <link rel="apple-touch-icon" href="/apple-touch-icon.png?rev=6">
-            <link rel="manifest" href="/site.webmanifest?rev=6">
-            <meta name="theme-color" content="#ffffff">
-            
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jiro Magracia Portfolio</title>
+    
+    <!-- GitHub Pages Favicon (Optimized Version) -->
+    <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
+    <link rel="manifest" href="/site.webmanifest?v=2">
+    <meta name="theme-color" content="#ff9e00"> <!-- Matches your orange accent -->
+</head>
             <!-- Cache Killer -->
             <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         </head>
@@ -205,8 +206,8 @@
             <div class="timeline-item">
                 <div class="timeline-icon">🎓</div>
                 <div class="content">
-                    <h3>Filmakademie Baden-Württemberg/Animationsinstitut </h3>
-                    <p class="timeline-meta">Diploma in Animation | Stuttgart, Sep 2018 - Apr 2024</p>
+                    <h3>Filmakademie Baden-Württemberg/Animationsinstitut</h3>
+                    <p class="timeline-meta">Diploma in Animation | Stuttgart, Sep 2018 - April 2024</p>
                     <ul class="timeline-highlights">
                         <li>Specialized in 3D Character Animation under <strong>Dan Nguyen (Pixar)</strong> and <strong>Thomas Grummt (Dreamworks)</strong>.</li>
                         <li>Directed and lead-animated student projects.</li>
