--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jiro Magracia Portfolio</title>
-    
-    <!-- GitHub Pages Favicon (Optimized Version) -->
-    <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
-    <link rel="manifest" href="/site.webmanifest?v=2">
-    <meta name="theme-color" content="#ff9e00"> <!-- Matches your orange accent -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jiro Magracia Portfolio</title>
+
+  <!-- Favicon and manifest -->
+  <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
+  <link rel="manifest" href="/site.webmanifest?v=2" />
+
+  <!-- Other meta -->
+  <meta name="theme-color" content="#ff9e00" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta name="robots" content="noindex" />
 </head>
-            <!-- Cache Killer -->
-            <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-        </head>
-        <!-- Force GitHub Pages to recognize static files -->
-        <meta name="robots" content="noindex">
-    </head>
+<body>
+  <!-- Your site content here -->
+</body>
+</html>
+
         <!-- Required Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap JS Bundle -->
