--- a/index.html
+++ b/index.html
@@ -236,9 +236,11 @@
 <!-- CV Download Button -->
 <div class="row mt-5">
     <div class="col-lg-12 text-center">
-        <a href="assets/Jiro_Magracia_CV.pdf" class="btn btn-primary btn-lg cv-download-btn" download="Jiro_Magracia_CV.pdf">
-            <i class="fas fa-download mr-2"></i> Download My CV
-        </a>
+        <a href="assets/Jiro_Magracia_CV.pdf" 
+        class="btn cv-download-btn" 
+        download>
+        <i class="fas fa-download mr-2"></i> Download My CV
+     </a>
     </div>
 </div>
 </div>
