--- a/index.html
+++ b/index.html
@@ -250,6 +250,12 @@
 <section class="page-section" id="about" style="background-color: #f5f5f5; color: #ffffff; padding: 40px 0;">
     <div class="container">
         <!-- About Section Heading -->
+         <!-- Profile Picture -->
+<div class="row justify-content-center mb-4">
+    <div class="col-lg-8 text-center">
+        <img src="assets/your-profile.jpg" alt="Jiro Magracia" class="profile-picture rounded-circle">
+    </div>
+</div>
         <h2 class="text-center text-uppercase mb-2" 
             style="font-family: 'Quicksand', sans-serif; font-weight: 600; color: #fffefe;">
             About
