--- a/index.html
+++ b/index.html
@@ -249,18 +249,25 @@
 <!-- About Section -->
 <section class="page-section" id="about" style="background-color: #f5f5f5; color: #ffffff; padding: 40px 0;">
     <div class="container">
-        <!-- About Section Heading -->
-         <!-- Profile Picture -->
+<!-- Profile Picture - Centered -->
 <div class="row justify-content-center mb-4">
-    <div class="col-lg-8 text-center">
-        <img src="assets/your-profile.jpg" alt="Jiro Magracia" class="profile-picture rounded-circle">
+    <div class="col-12 text-center">
+        <img src="assets/your-profile.jpg" alt="Jiro Magracia" class="profile-picture">
     </div>
 </div>
-        <h2 class="text-center text-uppercase mb-2" 
-            style="font-family: 'Quicksand', sans-serif; font-weight: 600; color: #fffefe;">
-            About
-        </h2>
-        
+
+<!-- About Heading - Keep your existing style -->
+<h2 class="text-center text-uppercase mb-2" 
+    style="font-family: 'Quicksand', sans-serif; font-weight: 600; color: #fffefe;">
+    About
+</h2>
+
+<!-- About Content -->
+<div class="row justify-content-center">
+    <div class="col-lg-8">
+        <!-- Your existing about text content here -->
+    </div>
+</div>
         <!-- Introduction -->
         <p class="lead text-center mb-4" style="color: #ffffff;">A brief introduction.</p>
         
