added pumuckl and bieber

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
     <div class="col-lg-6 work-experience">
         <h2>Work Experience</h2>
         <div class="timeline">
-            <!-- Studio Soi -->
-        <!-- Modified Studio Soi Timeline Item -->
-<div class="timeline-item">
-    <div class="timeline-icon">💼</div>
-    <div class="content">
+            <div class="timeline-item">
+                <div class="timeline-icon">
+                    <img src="assets/img/pumuckl.png" class="pumuckl-avatar" alt="Pumuckl">
+                </div>
+                <div class="content">
         <h3>Studio Soi - Pumuckl Und Das Grosse Missverständniss
         </h3>
         <p class="timeline-date">April 2025 - PRESENT | Ludwigsburg</p>
@@ -178,15 +178,22 @@
                     <p class="timeline-desc">Freelance character animator for commercial projects.</p>
                 </div>
             </div>
-            <!-- Studio Filmbilder -->
-            <div class="timeline-item">
-                <div class="timeline-icon">💼</div>
-                <div class="content">
-                    <h3>Studio Filmbilder - AnimAnimals</h3>
-                    <p class="timeline-date">Jul 2022 - Sep 2022 | Stuttgart</p>
-                    <p class="timeline-desc"> Character Animator for full episode AnimAnimals Episode "Bieber"</p>
-                </div>
-            </div>
+<!-- Studio Filmbilder Timeline Item -->
+<div class="timeline-item">
+    <a href="https://www.kika.de/eltern/sendungen/baumhaus/fuenfzig-biber-100.html" 
+       class="timeline-link" 
+       target="_blank" 
+       rel="noopener noreferrer">
+        <div class="timeline-icon">
+            <img src="assets/img/bieber.png" class="pumuckl-avatar" alt="Bieber"> <!-- Same class as Pumuckl -->
+        </div>
+        <div class="content">
+            <h3>Studio Filmbilder - AnimAnimals</h3>
+            <p class="timeline-date">Jul 2022 - Sep 2022 | Stuttgart</p>
+            <p class="timeline-desc">Character Animator for full episode AnimAnimals Episode "Bieber"</p>
+        </div>
+    </a>
+</div>
             <!-- Bitteschoen.tv -->
             <div class="timeline-item">
                 <div class="timeline-icon">💼</div>
@@ -233,7 +240,7 @@
                 <div class="timeline-icon">🎓</div>
                 <div class="content">
                     <h3>LuMAA - The Lucerne Master Academy of Animation</h3>
-                    <p class="timeline-meta">Certificate in 3D Animation | July 2023 - Sep 2023</p>
+                    <p class="timeline-meta">Certificate in 3D Animation | Switzerland, July 2023 - Sep 2023</p>
                     <ul class="timeline-highlights">
                         <li>6-week intensive training with mentors from <strong>Dreamworks, Pixar, ILM, and WETA</strong>.</li>
                     </ul>
