--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
             <div class="col-lg-10 col-xl-8">
                 <div class="content-box about-box">
                     <p class="about-text" style="color: #333;">
-                        Born and raised in Japan, Italy, and Germany! I have loved and respected Animation for as long as I can remember. I started YouTubing as a kid and gained a big following, which motivated me to further study my craft. I completed my studies in Animation at the Filmakademie Animationinstitut in Ludwigsburg, Germany, in early 2024, and Animation Mentor in 2025.
+                        Hello! My name is Marius Wilhelm Jiro Magracia and I am born and raised in Japan, Italy, and Germany! I have loved and respected Animation for as long as I can remember. I started YouTubing as a kid and gained a big following, which motivated me to further study my craft. I completed my studies in Animation at the Filmakademie Animationinstitut in Ludwigsburg, Germany, in early 2024, and Animation Mentor in 2025.
                         <br><br>
-                        I acquired knowledge in 2D Animation, Editing, Directing, Lead Animation, and CG Animation. I had the amazing opportunity to work with mentors from studios like Pixar and DreamWorks to enhance my 3D Animation skills. My goal is to observe interesting things in life and bring them to life through my animations, entertaining each and every viewer.
+                        I acquired knowledge in 2D Animation, Editing, Directing, Lead Animation, and CG Animation. I had the amazing opportunity to work with mentors from studios like Pixar and DreamWorks to enhance my 3D Animation skills. For me, Animation is a way of living. I love to experience, observe and curiously find more about life itself. I hope to entertain each and everyone with my animations.
                     </p>
                 </div>
             </div>
