--- a/index.html
+++ b/index.html
@@ -151,28 +151,36 @@
                 id="vimeo-player">
             </iframe>
             
-            <!-- Fallback Content (hidden by default) -->
-            <div id="video-fallback" class="position-absolute top-0 start-0 w-100 h-100 bg-dark d-none flex-column justify-content-center align-items-center text-center p-3 rounded">
-                <div class="vimeo-loader position-absolute top-50 start-50 translate-middle">
-                    <div class="spinner-border text-orange" style="width: 3rem; height: 3rem;" role="status">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
-                </div>
-                <div id="fallback-message" class="d-none">
-                    <i class="fas fa-video-slash text-orange mb-3" style="font-size: 2rem;"></i>
-                    <p class="text-white mb-4">Alternative viewing options:</p>
-                    <div class="d-flex gap-3 flex-wrap justify-content-center">
-                        <a href="https://vimeo.com/1058698965" class="btn btn-orange" target="_blank" rel="noopener">
-                            <i class="fab fa-vimeo-v me-2"></i> Watch on Vimeo
-                        </a>
-                        <button id="try-again-btn" class="btn btn-outline-light">
-                            <i class="fas fa-sync-alt me-2"></i> Retry
-                        </button>
-                    </div>
-                </div>
-            </div>
+<!-- Fallback Content (hidden by default) -->
+<div id="video-fallback" class="position-absolute top-0 start-0 w-100 h-100 bg-dark d-none flex-column justify-content-center align-items-center text-center p-3 rounded">
+    <div class="vimeo-loader position-absolute top-50 start-50 translate-middle">
+        <div class="spinner-border text-orange" style="width: 3rem; height: 3rem;" role="status">
+            <span class="visually-hidden">Loading...</span>
         </div>
     </div>
+    <div id="fallback-message" class="d-none">
+        <i class="fas fa-video-slash text-orange mb-3" style="font-size: 2rem;"></i>
+        <p class="text-white fw-semibold">Alternative viewing options:</p>
+        
+        <!-- 👇 New line with direct link -->
+        <p class="text-white mb-3">
+            If playback does not work, 
+            <a href="https://vimeo.com/1058698965" class="text-orange fw-semibold text-decoration-underline" target="_blank" rel="noopener">
+                click here to watch on Vimeo
+            </a>.
+        </p>
+
+        <!-- Existing buttons -->
+        <div class="d-flex gap-3 flex-wrap justify-content-center">
+            <a href="https://vimeo.com/1058698965" class="btn btn-orange" target="_blank" rel="noopener">
+                <i class="fab fa-vimeo-v me-2"></i> Watch on Vimeo
+            </a>
+            <button id="try-again-btn" class="btn btn-outline-light">
+                <i class="fas fa-sync-alt me-2"></i> Retry
+            </button>
+        </div>
+    </div>
+</div>
 </section>
 
 <!-- Vimeo API with corporate-friendly loading -->
