--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
         <title>Jiro Magracia Portfolio Website</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/yellow-favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -339,7 +337,7 @@ document.head.appendChild(vimeoScript);
         <div class="content">
             <h3>Studio Filmbilder - AnimAnimals</h3>
             <p class="timeline-date">Jul 2022 - Sep 2022 | Stuttgart</p>
-            <p class="timeline-desc">Character Animator for full episode AnimAnimals Episode "Bieber"</p>
+            <p class="timeline-desc">Character Animator for full episode of  AnimAnimals Episode "Bieber"</p>
         </div>
     </a>
 </div>
