--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jiro Magracia Portfolio</title>
 
-  <!-- Favicon and manifest -->
-  <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
-  <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=2" />
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=2" />
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=2" />
-  <link rel="manifest" href="site.webmanifest?v=2" />
+<!-- Favicon and manifest -->
+<link rel="icon" href="/favicon.ico?v=3" type="image/x-icon" />
+<link rel="shortcut icon" href="/favicon.ico?v=3" type="image/x-icon" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3" />
+<link rel="manifest" href="/site.webmanifest?v=3" />
 
   <!-- Other meta -->
   <meta name="theme-color" content="#ff9e00" />
